[project]
name = "bapt"
version = "0.1.0"
description = "Better apt. A wrapper around apt."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.1.0,<15.0.0)",
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
bapt = "bapt.cli:main"